z-index fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ body {
   margin-bottom: 50px;
   top: 0;
   padding: 1rem;
+  z-index: 10;
 }
 
 .quote-box {
@@ -98,7 +99,8 @@ li button {
 }
 
 .customCardOne {
-  display:flex
+  display:flex;
+  z-index: 0;
 }
 
 .customCardOne ul {
